--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run chartTest:serve-ssr",
+    "serve:ssr": "node dist/chartTest/server/main.js",
+    "build:ssr": "ng build --prod && ng run chartTest:server:production",
+    "prerender": "ng run chartTest:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +22,16 @@
     "@angular/forms": "~10.2.4",
     "@angular/platform-browser": "~10.2.4",
     "@angular/platform-browser-dynamic": "~10.2.4",
+    "@angular/platform-server": "~10.2.4",
     "@angular/router": "~10.2.4",
+    "@nguniversal/express-engine": "^10.1.0",
+    "apexcharts": "^3.29.0",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "0.5.5",
+    "express": "^4.15.2",
+    "mock-browser": "^0.92.14",
+    "ng-apexcharts": "^1.5.0",
+    "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -27,13 +40,16 @@
     "@angular-devkit/build-angular": "~0.1002.3",
     "@angular/cli": "~10.2.3",
     "@angular/compiler-cli": "~10.2.4",
-    "@types/node": "^12.11.1",
+    "@nguniversal/builders": "^10.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "domino": "^2.1.6",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
